# torsion_V2

./: .gitignore  README.md  evaluate_torsion_physics.py  living_silicon_v26_patched.cpp  living_silicon_v26_patched.hpp  run_all.py  theory_synthesis.py  torsion_field_verification.py  torsion_full_report.md  torsion_well_hdf5_writer.py  train_torsion_ga.py  visualize_silicon_torsion.py
Living_Silicon_Core/: benchmark_results.csv  living_silicon_os.cpp
the_well-master/V26_torsion/: CMakeLists.txt  torsion_evolution.csv  torsion_silicon_test.cpp
the_well-master/V26_torsion/src/control/: living_silicon.cpp
the_well_cpp/: CMakeLists.txt  Makefile  README.md  convnet_results.csv  dashboard_convnet.txt  dashboard_fno.txt  fno_results.csv
the_well_cpp/deploy/: bootstrap_toolchain.ps1  build_image.ps1  hyperv_setup.ps1  silicon_controller.cpp
the_well_cpp/src/: compat.hpp  engine.hpp  kernel.cpp  main.cpp  master_genome.hpp  optimizer.hpp  stress_test.cpp  tensor.hpp  test_master_genome.cpp  test_null_model.cpp  test_torsion_field.cpp
the_well_cpp/src/boot/: boot.asm  linker.ld
the_well_cpp/src/core/: fft.hpp  tensor_nd.hpp
the_well_cpp/src/hyperv/: ring_protocol.hpp
the_well_cpp/src/models/: conv_net.hpp  fno.hpp  fno2d.hpp  model.hpp  pinn.hpp  resnet2d.hpp  unet.hpp  unet2d.hpp  vit.hpp
the_well_cpp/src/physics/: acoustic_scattering.hpp  active_matter_visco.hpp  convective_turb_rad.hpp  diffusion_wave_burgers.hpp  euler_helmholtz_advection_rd.hpp  ks_ch_torsion2d_ac.hpp  mhd_rb_sw.hpp  navier_stokes_2d.hpp  neutron_planetswe.hpp  pde_base.hpp  rt_shear.hpp  supernova_turb.hpp  torsion_field.hpp
the_well_cpp/src/runtime/: bare_metal.hpp
the_well_cpp/src/tests/: test_fft.hpp  test_gradients.hpp  test_math.hpp  test_pde.hpp
the_well_cpp/src/training/: adamw.hpp  metrics.hpp
